showページ遷移

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,7 @@
 @import "reset";
 @import "diarys/index";
 @import "diarys/new";
+@import "diarys/edit";
+@import "diarys/show";
 @import "font-awesome-sprockets";
 @import "font-awesome";
