newページ遷移

--- a/app/views/diarys/index.haml
+++ b/app/views/diarys/index.haml
@@ -10,7 +10,7 @@
     -#   = @target.target
     -# - else
     -#   %span.text 目標を作成してください！
-    = link_to(("#"),class:'Content__box__target--link') do
+    = link_to((new_target_path),class:'Content__box__target--link') do
       .Content__box__target--btn 目標作成
   .Content__block
     .Content__block__diary D i a r y
