targetページ作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,5 +3,7 @@
 @import "diarys/new";
 @import "diarys/edit";
 @import "diarys/show";
+@import "targets/index";
+@import "targets/new";
 @import "font-awesome-sprockets";
 @import "font-awesome";
