--- a/app/views/diarys/_header.haml
+++ b/app/views/diarys/_header.haml
@@ -2,4 +2,4 @@
   .Container
     %h2.header-left
       Franklin Diary
-    = link_to 'ログアウト',"#", class:'header-right'
+    = link_to 'ログアウト', destroy_user_session_path , method: :delete, class:'header-right'
