--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,5 +5,6 @@
 @import "diarys/show";
 @import "targets/index";
 @import "targets/new";
+@import "users/devise";
 @import "font-awesome-sprockets";
 @import "font-awesome";
