--- a/app/views/diaries/index.haml
+++ b/app/views/diaries/index.haml
@@ -2,7 +2,7 @@
 .Main
   .Main__image
     .Main__image--text 
-      = link_to current_user.nickname, "#", class: "Main__image--text--nickname"
+      = link_to current_user.nickname, "#page", class: "Main__image--text--nickname"
       %span.Main__image--text--text 's diary
 .Primary
   .Primary__box
@@ -14,6 +14,7 @@
     -#   %span.text 目標を作成してください！
     = link_to((new_target_path),class:'Primary__box__target--link') do
       .Primary__box__target--btn 目標作成
+  #page
   .Primary__block
     .Primary__block__diary D i a r y
     %ul.Primary__block__diary--list
