編集までのデータベース作成

--- a/app/assets/stylesheets/diarys/index.scss
+++ b/app/assets/stylesheets/diarys/index.scss
@@ -70,6 +70,10 @@
       &--link{
         text-decoration: none;
       }
+      .diary-list{
+        font-size: 20px;
+        text-decoration: none;
+      }
       &--btn{
         color: white;
         margin:15px 15px 15px 15px;
