--- a/app/views/diaries/edit.haml
+++ b/app/views/diaries/edit.haml
@@ -2,38 +2,38 @@
 .Notebook
   .Notebook__content 
     %p.Notebook__content__text Daily Planner
-    = form_with local: true do |f|
+    = form_with(model: @diary, local: true ) do |f|
       .Notebook__content__priority 
         %p.Notebook__content__priority--text Priority
         .Notebook__content__priority--number
-          =f.number_field :hoge,class:"number_field", in: 1.0..10.0
-          =f.number_field :hoge,class:"number_field", in: 1.0..10.0
-          =f.number_field :hoge,class:"number_field", in: 1.0..10.0
-          =f.number_field :hoge,class:"number_field", in: 1.0..10.0
-          =f.number_field :hoge,class:"number_field", in: 1.0..10.0
-          =f.number_field :hoge,class:"number_field", in: 1.0..10.0
-          =f.number_field :hoge,class:"number_field", in: 1.0..10.0
-          =f.number_field :hoge,class:"number_field", in: 1.0..10.0
-          =f.number_field :hoge,class:"number_field", in: 1.0..10.0
-          =f.number_field :hoge,class:"number_field", in: 1.0..10.0
+          =f.number_field :priority1,class:"number_field", in: 1.0..10.0
+          =f.number_field :priority2,class:"number_field", in: 1.0..10.0
+          =f.number_field :priority3,class:"number_field", in: 1.0..10.0
+          =f.number_field :priority4,class:"number_field", in: 1.0..10.0
+          =f.number_field :priority5,class:"number_field", in: 1.0..10.0
+          =f.number_field :priority6,class:"number_field", in: 1.0..10.0
+          =f.number_field :priority7,class:"number_field", in: 1.0..10.0
+          =f.number_field :priority8,class:"number_field", in: 1.0..10.0
+          =f.number_field :priority9,class:"number_field", in: 1.0..10.0
+          =f.number_field :priority10,class:"number_field", in: 1.0..10.0
       .Notebook__content__taskbox
         %p.Notebook__content__taskbox--text Task Box
         .Notebook__content__taskbox--field
-          =f.text_field :hoge,class:"text_field", placeholder:"計画立案"
-          =f.text_field :hoge,class:"text_field", placeholder:"計画立案"
-          =f.text_field :hoge,class:"text_field", placeholder:"計画立案"
-          =f.text_field :hoge,class:"text_field", placeholder:"計画立案"
-          =f.text_field :hoge,class:"text_field", placeholder:"計画立案"
-          =f.text_field :hoge,class:"text_field", placeholder:"計画立案"
-          =f.text_field :hoge,class:"text_field", placeholder:"計画立案"
-          =f.text_field :hoge,class:"text_field", placeholder:"計画立案"
-          =f.text_field :hoge,class:"text_field", placeholder:"計画立案"
-          =f.text_field :hoge,class:"text_field", placeholder:"計画立案"
+          =f.text_field :taskbox1,class:"text_field", placeholder:"計画立案"
+          =f.text_field :taskbox2,class:"text_field", placeholder:"計画立案"
+          =f.text_field :taskbox3,class:"text_field", placeholder:"計画立案"
+          =f.text_field :taskbox4,class:"text_field", placeholder:"計画立案"
+          =f.text_field :taskbox5,class:"text_field", placeholder:"計画立案"
+          =f.text_field :taskbox6,class:"text_field", placeholder:"計画立案"
+          =f.text_field :taskbox7,class:"text_field", placeholder:"計画立案"
+          =f.text_field :taskbox8,class:"text_field", placeholder:"計画立案"
+          =f.text_field :taskbox9,class:"text_field", placeholder:"計画立案"
+          =f.text_field :taskbox10,class:"text_field", placeholder:"計画立案"
       .Notebook__content__diary
         %p.Notebook__content__diary--text Diary
         .Notebook__content__diary--field
-          = f.text_area :hoge, class:"diary-text", placeholder:"計画立案の結果を記入", size: "60x20"
+          = f.text_area :diary, class:"diary-text", placeholder:"計画立案の結果を記入", size: "60x20"
       .Notebook__content__date
-        =f.date_field :hoge,class:"data"
+        =f.date_field :date,class:"data"
         .Notebook__content__date__submit
           = f.submit "変　更", class:"submit"
