--- a/app/assets/stylesheets/diarys/edit.scss
+++ b/app/assets/stylesheets/diarys/edit.scss
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
 }
-.field{
-  border: 1px solid black;
-  height: 5px;
-  width: 10px;
-}
+// .field{
+//   // border: 1px solid black;
+//   // height: 5px;
+//   // width: 10px;
+// }
