--- a/app/assets/stylesheets/targets/new.scss
+++ b/app/assets/stylesheets/targets/new.scss
@@ -23,6 +23,7 @@
       left:50px;
     }
     .target-text{
+      padding: 5px 20px;
       width: 85%;
       margin: 0 auto;
       position: absolute;
@@ -36,6 +37,11 @@
       background-color: #9966FF	;
       cursor: pointer;
       border-radius: 10%;
+      position: absolute;
+      bottom: 10px;
+      right: 20px;
+    }
+    &__edit{
       position: absolute;
       bottom: 10px;
       right: 20px;
