--- a/app/views/targets/edit.haml
+++ b/app/views/targets/edit.haml
@@ -6,5 +6,9 @@
     = form_with(model: @target, local: true )do |f|
       .Target__content__fild
       =f.text_area :target, class:"target-text", placeholder:"目標を記入", size: "80x5"
-      .Target__content__submit
-      = f.submit "登　録", class:"submit"
+      .Target__content__edit
+        = f.submit "変　更", class:"edit"
+        %span or
+        = link_to '削　除', target_path(@target.id),method: :delete ,class:"dalete"
+        %span or
+        = link_to 'もどる', "/",class:"dalete"
