--- a/app/assets/stylesheets/diarys/index.scss
+++ b/app/assets/stylesheets/diarys/index.scss
@@ -70,6 +70,7 @@
          font-size: 50px;
         }
         .target{
+          margin-bottom:10px;
           padding: 5px;
           border: 1px solid black;
         }
