--- a/app/views/diaries/index.haml
+++ b/app/views/diaries/index.haml
@@ -27,5 +27,5 @@
 = link_to(new_diary_path) do
   .Diary
     %span.Diary__text 予定作成
-    = image_tag '/assets/diary.jpeg', size: '185×50' ,class:'Diary__image'
+    = image_tag 'diary.jpeg', size: '185×50' ,class:'Diary__image'
 
