--- a/app/assets/stylesheets/users/devise.scss
+++ b/app/assets/stylesheets/users/devise.scss
@@ -47,3 +47,19 @@
     text-decoration: none;
   }
 }
+@media(max-width: 670px){
+  .Content__fild{
+    font-size: 40px;
+    width: 70vw;
+  }
+  .titel {
+    width: 70vw;
+    font-size: 80px;
+  }
+  .field.actions{
+    margin: 20px;
+  }
+  .box{
+    height: 70px;
+  }
+}
