--- a/app/assets/stylesheets/diarys/index.scss
+++ b/app/assets/stylesheets/diarys/index.scss
@@ -33,7 +33,8 @@
 }
 .Main{
   &__image{
-    height: 1100px;
+    height: 100vh;
+    width: 100vw;
     background-image: image-url('IMG_1573.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -149,5 +150,45 @@
   }
   &__image{
     width: 60%;
+  }
+}
+
+@media(max-width: 670px){
+  .Diary{
+    width: 100px;
+  }
+  .Primary__box{
+    flex-direction: column;
+    position: relative;
+    padding: 10vh 0;
+    &__target{
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      &--text{
+        padding: 0px;
+        margin-bottom: 5px;
+      }
+      &--btn{
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+        display: inline-block;
+        padding: 0.5em 1em;
+        text-decoration: none;
+        background: #668ad8;
+        color: #FFF;
+        border-bottom: solid 4px #627295;
+        border-radius: 3px;
+      }
+      &--btn:active{
+        -webkit-transform: translateY(4px);
+        transform: translateY(4px);
+        border-bottom: none;
+      }
+    }
+  }
+  .Primary__block__diary--list{
+    font-size: 20px;
   }
 }
