--- a/app/assets/stylesheets/targets/new.scss
+++ b/app/assets/stylesheets/targets/new.scss
@@ -24,7 +24,8 @@
     }
     .target-text{
       padding: 5px 20px;
-      width: 85%;
+      width: 50vw;
+      height: 20vh;
       margin: 0 auto;
       position: absolute;
       top:300px;
@@ -45,6 +46,19 @@
       position: absolute;
       bottom: 10px;
       right: 20px;
+      display: flex;
     }
+  }
+}
+@media(max-width: 670px){
+  .Target__content__edit{
+    flex-direction: column;
+    text-align: center;
+  }
+  #target_target{
+    height: 50px;
+    padding: 0;
+    left: 55px;
+    top:260px;
   }
 }
