--- a/app/views/targets/edit.haml
+++ b/app/views/targets/edit.haml
@@ -5,7 +5,7 @@
     %span.Target__content__target Write your goals
     = form_with(model: @target, local: true )do |f|
       .Target__content__fild
-      =f.text_area :target, class:"target-text", placeholder:"目標を記入", size: "80x5"
+      =f.text_area :target, class:"target-text", placeholder:"目標を記入"
       .Target__content__edit
         = f.submit "変　更", class:"edit"
         %span or
