再度微調整

--- a/app/assets/stylesheets/diarys/index.scss
+++ b/app/assets/stylesheets/diarys/index.scss
@@ -33,7 +33,7 @@
 }
 .Main{
   &__image{
-    height: 100vh;
+    height: 1100px;
     width: 100vw;
     background-image: image-url('IMG_1573.jpeg');
     background-size: cover;
